<resources>
    <string name="app_name">Bharat Jodo</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>

    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to">Please enter the OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="mobile_number_text">+91 9999999999</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>

    <string name="heading_one">Stay Connected with Bharat</string>
    <string name="heading_two">Uninterrupted Conversations</string>
    <string name="heading_three">Privacy First</string>
    <string name="heading_four">Feel Closer</string>
    <string name="heading_five">Cultural Harmony</string>

    <string name="index_heading1">HELLO THERE,</string>
    <string name="index_heading2">WELCOME BACK</string>

    <string name="signup_heading1">Namaste,</string>
    <string name="signup_heading2">Please Sign</string>
    <string name="signup_heading3">Up</string>

    <string name="login_heading1">Namaste,</string>
    <string name="login_heading2">Please Login</string>

    <string name="desc_one">Bharat Jodo connects hearts across the nation, enabling seamless communication and fostering relationships, just like the Indian tradition of togetherness.</string>
    <string name="desc_two">Experience uninterrupted conversations with Bharat Jodo, providing a reliable platform for all your video calls, echoing the reliability of Indian bonds.</string>
    <string name="desc_three">Your privacy is our priority. Bharat Jodo ensures your conversations are secure with advanced encryption, reflecting our commitment to safety.</string>
    <string name="desc_four">With Bharat Jodo, distance is just a word. Feel closer to your loved ones and colleagues with high-definition video calls, embodying the spirit of Indian unity.</string>
    <string name="desc_five">Bharat Jodo promotes cultural harmony by connecting people from diverse backgrounds, reflecting the rich tapestry of Indian culture.</string>

    <string name="greetings">Namaste, Welcome to Bharat Jodo</string>
    <string name="success">Success</string>
    <string name="success_dialogbox_text">Registration Successful!</string>
    <string name="enter_your_phone_number_signuppage">Enter your phone number</string>
    <string name="success_title_dialogbox">Success!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_chats_found">No Chats found</string>
    <string name="search_username">Search Username</string>
    <string name="no_users_found">No Users found</string>
    <string name="no_user_found">No User found</string>
    <string name="one_to_one_video_call">One To One Video Call</string>
    <string name="one_to_one_videocall">1–1 Video Call</string>
    <string name="group_video_call">Group Video Call</string>
    <string name="video_call_toolbar">Video Call</string>
    <string name="search_toolbar">Search User</string>
    <string name="home_toolbar">Home</string>
    <string name="friends_toolbar">Friends</string>
    <string name="no_friends_found">No Friends Found</string>
    <string name="profile_toolbar">Profile</string>
    <string name="username_profilepage">Username</string>
    <string name="update_profile_photo_text">Update Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="sent">Sent</string>
    <string name="username">Username</string>
    <string name="phonenumber">+919999999999</string>
    <string name="friends">Friends</string>
    <string name="pending_friend_requests">Pending Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_user">Delete User</string>
    <string name="log_out">Log Out</string>
    <string name="add_friend_two">Add Friend</string>
    <string name="pending_friend_requests_text">Pending Friend Requests</string>
    <string name="no_pending_friend_requests_found">No Pending Friend Requests Found</string>
    <string name="write_message_here">Write message here</string>
    <string name="sender_message_here">Sender message here</string>
    <string name="receiver_response_here">Receiver response here</string>

    <string name="write_your_message">Write your message</string>
</resources>