<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222831"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <TextView
            android:id="@+id/toolbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/search_toolbar"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/seach_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_corners"
            android:layout_margin="10dp"
            android:hint="@string/search_username"
            android:padding="10dp"
            android:elevation="4dp"
            android:layout_toStartOf="@id/search_user_button" />

        <ImageButton
            android:id="@+id/search_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout"
        android:padding="10dp" />

    <TextView
        android:id="@+id/norusersfoundinsearch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/no_user_found"
        android:textSize="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black" />

</RelativeLayout>
