<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_75sdp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_50sdp"
    app:cardElevation="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cardview_Lock_imageview"
            android:src="@drawable/baseline_person_24"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/cardview_Lock_imageview"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <TextView
                android:id="@+id/addfriend_cardviewUsername_textview"
                android:text="@string/username"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/addfriend_cardviewPhoneNumber_textview"
                android:text="@string/phonenumber"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonContainer_addfriendcardview"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <Button
                android:id="@+id/addfriend_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_background"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#FFFFFF"
                android:text="@string/add_friend"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
