<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222831"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <TextView
            android:id="@+id/toolbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/profile_toolbar"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/baseline_account_circle_24"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/username_textview"
                android:text="@string/username_profilepage"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/profilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/updateprofile_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_profile_photo_text"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/updateprofile_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFriendRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardUpdateProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pending_friend_requests"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/friend_requests_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
