<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#EEEEEE"
    tools:context=".OTP_verification">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_layout_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <Button
                android:id="@+id/back_button_otpverificationpage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/ic_arrow_back_black"
                android:tint="#000000" />

            <TextView
                android:id="@+id/otpverification_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/back_button_otpverificationpage"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_15sdp"
                android:textSize="@dimen/_20sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/otp_illustrator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_below="@id/relative_layout_1"
            android:src="@drawable/modified_otp_illustration" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp_illustrator"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pleaseEnterOTP_textview"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_the_otp_sent_to"
                android:textColor="#66000000"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/mobile_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/mobile_number_text"
                android:textColor="#CC000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6">

            <EditText
                android:id="@+id/otp_et1"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_et2"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_et3"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_et4"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_et5"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otp_et6"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_1"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/didnt_receive_otp_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/resend_otp_textview"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/resend_otp"
                android:textColor="#3640FB"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_65sdp">

            <Button
                android:id="@+id/verifybutton_otpverification"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/verify"
                android:background="@drawable/rounded_button"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>